hphp/hack/test/typecheck/using/using_return_disposable.php.constraint_method_call.exp
ERROR: File "using_return_disposable.php", line 37, characters 17-26:
Typing error (Typing[4207])
  File "using_return_disposable.php", line 37, characters 17-26:
  This is not marked `<<__ReturnDisposable>>`.
  File "using_return_disposable.php", line 10, characters 19-22:
  This is marked `<<__ReturnDisposable>>`.
